# rdkafka-sys

./: Cargo.toml  build.rs
examples/: consumer.rs
src/: bindings.rs  lib.rs
src/kafka/: config.rs  consumer.rs  message.rs  mod.rs  producer.rs
