[package]
name = "rdkafka_sys"
version = "1.5.0"
authors = ["chapterzero"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = { version = "0.53.1", optional = true }

[features]
default = []
gssapi = []
ssl = []
zstd = []
lz4 = []
build-binding = ["bindgen"]

[[bin]]
name = "binding"
required-features = ["build-binding"]
